--- a/config/content.htm
+++ b/config/content.htm
@@ -318,6 +318,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <h1 style="width: 100%; height: 100%;">作業區</h1>
+<p>因雲端硬碟時常有授權問題進不去，故將影片都上傳至YT。以下為影片連結</p>
+<p>字幕影片:<a href="https://www.youtube.com/watch?v=xhZdHNDl9Hg">https://www.youtube.com/watch?v=xhZdHNDl9Hg</a></p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/>
