--- a/config/content.htm
+++ b/config/content.htm
@@ -305,7 +305,6 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- add 1 to 100 part2 結束--></p>
 <!-- editor2 開始 -->
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
-<div id="kw_editor2" style="width: 600px; height: 300px;"></div>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
 <p><!-- 存擋表單開始 --></p>
 <form><label>Filename: <input id="kw_filename2" placeholder="input file name" type="text"/>.py</label> <input onclick="doSave('kw_py_src2', 'kw_filename2');" type="submit" value="Save"/></form>
@@ -321,7 +320,9 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>因雲端硬碟時常有授權問題進不去，故將影片都上傳至YT。以下為影片連結</p>
 <p>字幕影片:<a href="https://www.youtube.com/watch?v=xhZdHNDl9Hg">https://www.youtube.com/watch?v=xhZdHNDl9Hg</a></p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<div id="brython_div2"></div>
+<h1 id="brython_div2">ChatGPT</h1>
+<p>詢問如何將提交往前推的對話</p>
+<p><img alt="" height="425" src="/images/ChatGPT - Google Chrome 2024_4_12 下午 02_06_56.png" width="800"/></p>
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
