--- a/config/content.htm
+++ b/config/content.htm
@@ -317,8 +317,14 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <h1 id="brython_div2">ChatGPT</h1>
-<p>詢問如何將提交往前推的對話</p>
+<p>在要推送到github的時候有出現檔案過大無法傳送的問題，詢問老師之後得知:如果前幾次推送無法傳送，後續的推送也無完成。因為git只能做增加不能刪除，所以必須要找到前面版本的檔案進行刪除。</p>
+<p><img alt="" height="600" src="/images/41123124遇到的問題.jpg" width="800"/></p>
+<p>詢問如何將提交往前推的對話。</p>
 <p><img alt="" height="425" src="/images/ChatGPT - Google Chrome 2024_4_12 下午 02_06_56.png" width="800"/></p>
+<p>組員有遇到分支問題，推測是因為出現其他分支沒有合併到主分支的原因，git不知道要推送到哪裡。</p>
+<p><img alt="" height="425" src="/images/41123101遇到的分支問題.png" width="800"/></p>
+<p>以下詢問GPT得到的回答，解釋true以及false的差異。</p>
+<p><img alt="" height="425" src="/images/ChatGPT - Google Chrome 2024_4_12 下午 04_15_47.png" width="800"/></p>
 <h1 style="width: 100%; height: 100%;">作業區</h1>
 <p>因雲端硬碟時常有授權問題進不去，故將影片都上傳至YT。以下為影片連結</p>
 <p>字幕影片:<a href="https://www.youtube.com/watch?v=xhZdHNDl9Hg">https://www.youtube.com/watch?v=xhZdHNDl9Hg</a></p>
