新增逐字稿以及排版

--- a/content/作業區.html
+++ b/content/作業區.html
@@ -144,14 +144,18 @@ img.add_border {
         </header>
     <div id="tipue_search_content">ChatGPT << <a href='ChatGPT.html'>Previous</a> <br /><h1>作業區</h1>
 <p>因雲端硬碟時常有授權問題進不去，故將影片都上傳至YT。以下為影片連結</p>
-<p>字幕影片:<a href="https://www.youtube.com/watch?v=xhZdHNDl9Hg">https://www.youtube.com/watch?v=xhZdHNDl9Hg</a></p>
-<p>重點整理:</p>
-<p>組長必須建立一個midag的其中team</p>
-<p>利用codespaces來進行同步更新</p>
-<p>要啟動codespaces裡要先輸入chmod x+u init_replit把模組安裝</p>
-<p>接下來輸入python3 main.py來開啟（類似replit中的Run鍵）</p>
-<p>推送的步驟如下<br/>git add .<br/>git commit -m "modify site title"<br/>git push<br/>完成後回到網頁確認更新完畢</p>
-<p>網頁給的cpu為二核 8gb的ram跟32gb的內存</p>
+<ul>
+<li>字幕影片:<a href="https://www.youtube.com/watch?v=xhZdHNDl9Hg">https://www.youtube.com/watch?v=xhZdHNDl9Hg</a></li>
+<li>逐字稿檔案:<a href="https://drive.google.com/file/d/1OjQuykRh6XyPw4alpTfiIKIFZN1f1mso/view?usp=sharing">https://drive.google.com/file/d/1OjQuykRh6XyPw4alpTfiIKIFZN1f1mso/view?usp=sharing</a></li>
+<li>重點整理:</li>
+</ul>
+<p>組長必須建立一個midag的其中team。</p>
+<p>利用codespaces來進行同步更新。</p>
+<p>要啟動codespaces裡要先輸入chmod x+u init_replit把模組安裝。</p>
+<p>接下來輸入python3 main.py來開啟（類似replit中的Run鍵）。</p>
+<p>推送的步驟如下:<br/>git add .<br/>git commit -m "modify site title"<br/>git push<br/>完成後回到網頁確認更新完畢。</p>
+<p>網頁給的cpu為二核 8gb的ram跟32gb的內存。</p>
+<p>自評分數為65分。</p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <!-- editor2 結束 --><hr/>
 <p>
