--- a/config/content.htm
+++ b/config/content.htm
@@ -326,6 +326,9 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>以下詢問GPT得到的回答，解釋true以及false的差異。</p>
 <p><img alt="" height="425" src="/images/ChatGPT - Google Chrome 2024_4_12 下午 04_15_47.png" width="800"/></p>
 <h1 style="width: 100%; height: 100%;">作業區</h1>
+<ul>
+<li><span style="background-color: #00ff00;">影片作業</span></li>
+</ul>
 <p>因雲端硬碟時常有授權問題進不去，故將影片都上傳至YT。以下為影片連結</p>
 <ul>
 <li>字幕影片:<a href="https://www.youtube.com/watch?v=xhZdHNDl9Hg">https://www.youtube.com/watch?v=xhZdHNDl9Hg</a></li>
@@ -339,8 +342,25 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>推送的步驟如下:<br/>git add .<br/>git commit -m "modify site title"<br/>git push<br/>完成後回到網頁確認更新完畢。</p>
 <p>網頁給的cpu為二核 8gb的ram跟32gb的內存。</p>
 <p>自評分數為65分。</p>
+<ul>
+<li><span style="background-color: #00ff00;">平台作業</span></li>
+</ul>
+<p>摸索並學習如何使用NX繪製零件，繪製以下零件。</p>
+<p>底座<img alt="" height="425" src="/images/Autodesk Inventor Professional 2020 2024_5_17 下午 03_13_32.png" width="800"/></p>
+<p>平台</p>
+<p><img alt="" height="425" src="/images/NX - Shape Studio 2024_5_17 下午 03_13_53.png" width="800"/></p>
+<p>Y支架</p>
+<p><img alt="" height="425" src="/images/NX - Shape Studio 2024_5_17 下午 03_13_46.png" width="800"/></p>
+<p>S支架</p>
+<p><img alt="" height="425" src="/images/NX - Shape Studio 2024_5_17 下午 03_13_56.png" width="800"/></p>
+<p>連結軸</p>
+<p><img alt="" height="425" src="/images/NX - Shape Studio 2024_5_17 下午 03_13_56.png" width="800"/></p>
+<p>Inventor組裝</p>
+<p><img alt="" height="425" src="/images/Autodesk Inventor Professional 2020 2024_5_17 下午 03_08_50.png" width="800"/></p>
+<p>CoppeliaSim模擬</p>
+<p><img alt="" height="412" src="/images/CoppeliaSim Edu - New file - rendering_ 1 ms (8.06 fps) - SIMULATION STOPPED 2024_5_17 下午 03_08_35.png" width="800"/></p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<!-- editor2 結束 --><hr/>
+<!-- editor2 結束 -->
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
