新增與老師的問答

--- a/config/content.htm
+++ b/config/content.htm
@@ -316,7 +316,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
-<h1 id="brython_div2">ChatGPT</h1>
+<h1 id="brython_div2">問題串</h1>
 <p>在要推送到github的時候有出現檔案過大無法傳送的問題，詢問老師之後得知:如果前幾次推送無法傳送，後續的推送也無完成。因為git只能做增加不能刪除，所以必須要找到前面版本的檔案進行刪除。</p>
 <p><img alt="" height="600" src="/images/41123124遇到的問題.jpg" width="800"/></p>
 <p>詢問如何將提交往前推的對話。</p>
@@ -325,6 +325,9 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><img alt="" height="425" src="/images/41123101遇到的分支問題.png" width="800"/></p>
 <p>以下詢問GPT得到的回答，解釋true以及false的差異。</p>
 <p><img alt="" height="425" src="/images/ChatGPT - Google Chrome 2024_4_12 下午 04_15_47.png" width="800"/></p>
+<p>因上次使用NX內的python record沒有成功，所以先繪製零件，但是目前遇到一個問題，就是畫好的零件已經是一個結果，沒辦法讓程式去了解到繪製過程，沒辦法產生繪製過程的程式碼。</p>
+<p>詢問老師過後，得知雖然不能更改，但擁有"參數式"的概念，要的不是結果的零件檔案，而是從中取得參數可以做更改，在不同形狀幾何中，會有固定的變數參數，可以透過這些參數在程式中進行修改，這才是設計中最重要的部分。</p>
+<p><img alt="" height="798" src="/images/journal.py - SciTE 2024_5_31 下午 02_51_55.png" width="800"/></p>
 <h1 style="width: 100%; height: 100%;">作業區</h1>
 <ul>
 <li><span style="background-color: #00ff00;">影片作業</span></li>
