--- a/content/作業區.html
+++ b/content/作業區.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='ChatGPT.html'>ChatGPT</a><li><a href='作業區.html'>作業區</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">ChatGPT << <a href='ChatGPT.html'>Previous</a> <br /><h1>作業區</h1>
+    <div id="tipue_search_content">問題串 << <a href='問題串.html'>Previous</a> <br /><h1>作業區</h1>
 <ul>
 <li><span style="background-color: #00ff00;">影片作業</span></li>
 </ul>
@@ -180,7 +180,7 @@ img.add_border {
 <!-- editor2 結束 -->
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />ChatGPT << <a href='ChatGPT.html'>Previous</a> </div>
+</p><br />問題串 << <a href='問題串.html'>Previous</a> </div>
 
     <!-- footer -->
       <div class="container">
