新增零件檔案以及python檔案到靜態網站

--- a/content/作業區.html
+++ b/content/作業區.html
@@ -163,6 +163,8 @@ img.add_border {
 <li><span style="background-color: #00ff00;">平台作業</span></li>
 </ul>
 <p>摸索並學習如何使用NX繪製零件，繪製以下零件。</p>
+<p>零件檔案:<a href="https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link">https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link</a></p>
+<p>零件python檔案:<a href="https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link">https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link</a></p>
 <p>底座<img alt="" height="425" src="./../images/Autodesk Inventor Professional 2020 2024_5_17 下午 03_13_32.png" width="800"/></p>
 <p>平台</p>
 <p><img alt="" height="425" src="./../images/NX - Shape Studio 2024_5_17 下午 03_13_53.png" width="800"/></p>
