檢查錯誤並修改

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,9 +1,9 @@
 <h1>About</h1>
+<p>姓名:張晏菖 學號:41123124 班級:四設二甲</p>
 <p>網頁: <a class="Link--inTextBlock" href="https://probe2004.github.io/cd2024/">https://probe2004.github.io/cd2024/</a> </p>
 <p>網誌: <a href="https://probe2004.github.io/cd2024/blog" title="https://probe2004.github.io/cd2024/blog">https://probe2004.github.io/cd2024/blog</a></p>
 <p>簡報: <a href="https://probe2004.github.io/cd2024/reveal" title="https://probe2004.github.io/cd2024/reveal">https://probe2004.github.io/cd2024/reveal</a></p>
 <p>倉儲: <a href="https://github.com/probe2004/cd2024" title="https://github.com/probe2004/cd2024">https://github.com/probe2004/cd2024</a></p>
-<p></p>
 <h1>cmsimde</h1>
 <p><span style="background-color: #ccffcc;">SMap</span> - SiteMap - 依照階次列出網站的所有頁面.</p>
 <p><span style="background-color: #ccffcc;">EditA</span> - Edit All page - 將所有頁面放入編輯模式中, 主要用來處理頁面搬遷, 刪除或決定衝突頁面內容版本.</p>
@@ -349,8 +349,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <li><span style="background-color: #00ff00;">平台作業</span></li>
 </ul>
 <p>摸索並學習如何使用NX繪製零件，繪製以下零件。</p>
-<p>零件檔案:<a href="https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link">https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link</a></p>
-<p>零件python檔案:<a href="https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link">https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link</a></p>
+<p>零件檔案位置:<a href="https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link">https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link</a></p>
+<p>零件python檔案位置:<a href="https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link">https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link</a></p>
 <p>底座<img alt="" height="425" src="/images/Autodesk Inventor Professional 2020 2024_5_17 下午 03_13_32.png" width="800"/></p>
 <p>平台</p>
 <p><img alt="" height="425" src="/images/NX - Shape Studio 2024_5_17 下午 03_13_53.png" width="800"/></p>
