--- a/content/index.html
+++ b/content/index.html
@@ -142,11 +142,11 @@ img.add_border {
 
         </header>
     <div id="tipue_search_content"> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>About</h1>
+<p>姓名:張晏菖 學號:41123124 班級:四設二甲</p>
 <p>網頁: <a class="Link--inTextBlock" href="https://probe2004.github.io/cd2024/">https://probe2004.github.io/cd2024/</a> </p>
 <p>網誌: <a href="https://probe2004.github.io/cd2024/blog" title="https://probe2004.github.io/cd2024/blog">https://probe2004.github.io/cd2024/blog</a></p>
 <p>簡報: <a href="https://probe2004.github.io/cd2024/reveal" title="https://probe2004.github.io/cd2024/reveal">https://probe2004.github.io/cd2024/reveal</a></p>
 <p>倉儲: <a href="https://github.com/probe2004/cd2024" title="https://github.com/probe2004/cd2024">https://github.com/probe2004/cd2024</a></p>
-<p></p>
 <br /> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
