項目二影片連結

--- a/content/W17.html
+++ b/content/W17.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='W17.html'>W17</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a><li><a href='W17.html'>W17</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,12 +142,16 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='問題串.html'>Next</a> >> 問題串<br /><h1>W17</h1>
+    <div id="tipue_search_content">作業區 << <a href='作業區.html'>Previous</a> <br /><h1>W17</h1>
 <p>YT影片繪製零件連結:</p>
-<p>YT影片python建立零件連結:</p>
+<p>YT影片python建立零件連結:<a href="https://youtu.be/3bQxOq6ca9w">https://youtu.be/3bQxOq6ca9w</a></p>
 <p>足球零件檔:<a href="https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing">https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing</a></p>
 <p>python檔:<a href="https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing">https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing</a></p>
-<br />Brython << <a href='Brython.html'>Previous</a> <a href='問題串.html'>Next</a> >> 問題串</div>
+<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
+<!-- editor2 結束 -->
+<p>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+</p><br />作業區 << <a href='作業區.html'>Previous</a> </div>
 
     <!-- footer -->
       <div class="container">
