--- a/content/作業區.html
+++ b/content/作業區.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='W17.html'>W17</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a><li><a href='W17.html'>W17</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">問題串 << <a href='問題串.html'>Previous</a> <br /><h1>作業區</h1>
+    <div id="tipue_search_content">問題串 << <a href='問題串.html'>Previous</a> <a href='W17.html'>Next</a> >> W17<br /><h1>作業區</h1>
 <ul>
 <li><span style="background-color: #00ff00;">影片作業</span></li>
 </ul>
@@ -178,11 +178,7 @@ img.add_border {
 <p><img alt="" height="425" src="./../images/Autodesk Inventor Professional 2020 2024_5_17 下午 03_08_50.png" width="800"/></p>
 <p>CoppeliaSim模擬</p>
 <p><img alt="" height="412" src="./../images/CoppeliaSim Edu - New file - rendering_ 1 ms (8.06 fps) - SIMULATION STOPPED 2024_5_17 下午 03_08_35.png" width="800"/></p>
-<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<!-- editor2 結束 -->
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />問題串 << <a href='問題串.html'>Previous</a> </div>
+<br />問題串 << <a href='問題串.html'>Previous</a> <a href='W17.html'>Next</a> >> W17</div>
 
     <!-- footer -->
       <div class="container">
