--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='W17.html'>W17</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a><li><a href='W17.html'>W17</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Replit << <a href='Replit.html'>Previous</a> <a href='W17.html'>Next</a> >> W17<br /><h1>Brython</h1>
+    <div id="tipue_search_content">Replit << <a href='Replit.html'>Previous</a> <a href='問題串.html'>Next</a> >> 問題串<br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -423,7 +423,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
-<br />Replit << <a href='Replit.html'>Previous</a> <a href='W17.html'>Next</a> >> W17</div>
+<br />Replit << <a href='Replit.html'>Previous</a> <a href='問題串.html'>Next</a> >> 問題串</div>
 
     <!-- footer -->
       <div class="container">
