--- a/content/cmsimde.html
+++ b/content/cmsimde.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='W17.html'>W17</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a><li><a href='W17.html'>W17</a></li>
                       </ul>
                 </nav>
               </div>
