--- a/content/問題串.html
+++ b/content/問題串.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='W17.html'>W17</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='問題串.html'>問題串</a><li><a href='作業區.html'>作業區</a><li><a href='W17.html'>W17</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">W17 << <a href='W17.html'>Previous</a> <a href='作業區.html'>Next</a> >> 作業區<br /><h1>問題串</h1>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='作業區.html'>Next</a> >> 作業區<br /><h1>問題串</h1>
 <p>在要推送到github的時候有出現檔案過大無法傳送的問題，詢問老師之後得知:如果前幾次推送無法傳送，後續的推送也無完成。因為git只能做增加不能刪除，所以必須要找到前面版本的檔案進行刪除。</p>
 <p><img alt="" height="600" src="./../images/41123124遇到的問題.jpg" width="800"/></p>
 <p>詢問如何將提交往前推的對話。</p>
@@ -154,7 +154,7 @@ img.add_border {
 <p>因上次使用NX內的python record沒有成功，所以先繪製零件，但是目前遇到一個問題，就是畫好的零件已經是一個結果，沒辦法讓程式去了解到繪製過程，沒辦法產生繪製過程的程式碼。</p>
 <p>詢問老師過後，得知雖然不能更改，但擁有"參數式"的概念，要的不是結果的零件檔案，而是從中取得參數可以做更改，在不同形狀幾何中，會有固定的變數參數，可以透過這些參數在程式中進行修改，這才是設計中最重要的部分。</p>
 <p><img alt="" height="798" src="./../images/journal.py - SciTE 2024_5_31 下午 02_51_55.png" width="800"/></p>
-<br />W17 << <a href='W17.html'>Previous</a> <a href='作業區.html'>Next</a> >> 作業區</div>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='作業區.html'>Next</a> >> 作業區</div>
 
     <!-- footer -->
       <div class="container">
