--- a/content/W17.html
+++ b/content/W17.html
@@ -143,7 +143,7 @@ img.add_border {
 
         </header>
     <div id="tipue_search_content">作業區 << <a href='作業區.html'>Previous</a> <br /><h1>W17</h1>
-<p>YT影片繪製零件連結:</p>
+<p>YT影片繪製零件連結:<a href="https://www.youtube.com/watch?v=jpD8IAJZ59s">https://www.youtube.com/watch?v=jpD8IAJZ59s</a></p>
 <p>YT影片python建立零件連結:<a href="https://youtu.be/3bQxOq6ca9w">https://youtu.be/3bQxOq6ca9w</a></p>
 <p>足球零件檔:<a href="https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing">https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing</a></p>
 <p>python檔:<a href="https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing">https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing</a></p>
