--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -366,7 +366,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><img alt="" height="412" src="/images/CoppeliaSim Edu - New file - rendering_ 1 ms (8.06 fps) - SIMULATION STOPPED 2024_5_17 下午 03_08_35.png" width="800"/></p>
 <h1>W17</h1>
 <p>YT影片繪製零件連結:</p>
-<p>YT影片python建立零件連結:</p>
+<p>YT影片python建立零件連結:<a href="https://youtu.be/3bQxOq6ca9w">https://youtu.be/3bQxOq6ca9w</a></p>
 <p>足球零件檔:<a href="https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing">https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing</a></p>
 <p>python檔:<a href="https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing">https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing</a></p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
